--- a/renderTest.html
+++ b/renderTest.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>My first three.js app</title>
+		<title>test renderererer</title>
 		<style>
 			body { margin: 0; }
-			canvas { width: 100%; height: 100% }
+			canvas { width: 250px; height: 250px }
 		</style>
 	</head>
 	<body>
